GearsetPOC/force-app/main/default/objects/Images__c/Images__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Images</label>
</CustomObject>