GearsetPOC/force-app/main/default/objects/Images__c/fields/Avantage_Icon__c.field-meta.xml
<CustomField>
    <fullName>Avantage_Icon__c</fullName>
    <label>Avantage_Icon</label>
    <length>30</length>
    <type>Text</type>
</CustomField>