GearsetPOC/force-app/main/default/objects/Images__c/fields/Carte_Blanche_Icon__c.field-meta.xml
<CustomField>
    <fullName>Carte_Blanche_Icon__c</fullName>
    <label>Carte Blanche Icon</label>
    <length>30</length>
    <type>Text</type>
</CustomField>