GearsetPOC/force-app/main/default/objects/Images__c/fields/Classique_Icon__c.field-meta.xml
<CustomField>
    <fullName>Classique_Icon__c</fullName>
    <label>Classique_Icon</label>
    <length>30</length>
    <type>Text</type>
</CustomField>