GearsetPOC/force-app/main/default/objects/Images__c/fields/Email_Sent_Icon__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent_Icon__c</fullName>
    <label>Email Sent Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>