GearsetPOC/force-app/main/default/objects/Images__c/fields/Email_Unsent_Icon__c.field-meta.xml
<CustomField>
    <fullName>Email_Unsent_Icon__c</fullName>
    <label>Email Unsent Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>