GearsetPOC/force-app/main/default/objects/Images__c/fields/High_Priority_Icon__c.field-meta.xml
<CustomField>
    <fullName>High_Priority_Icon__c</fullName>
    <label>High Priority Icon</label>
    <length>18</length>
    <type>Text</type>
</CustomField>