GearsetPOC/force-app/main/default/objects/Images__c/fields/Low_Priority_Icon__c.field-meta.xml
<CustomField>
    <fullName>Low_Priority_Icon__c</fullName>
    <label>Low Priority Icon</label>
    <length>18</length>
    <type>Text</type>
</CustomField>