GearsetPOC/force-app/main/default/objects/Images__c/fields/Manual_Icon__c.field-meta.xml
<CustomField>
    <fullName>Manual_Icon__c</fullName>
    <label>Manual Icon</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>