GearsetPOC/force-app/main/default/objects/Images__c/fields/Medium_Priority_Icon__c.field-meta.xml
<CustomField>
    <fullName>Medium_Priority_Icon__c</fullName>
    <label>Medium_Priority_Icon</label>
    <length>18</length>
    <type>Text</type>
</CustomField>